fix: Resolve z-index issue with back btn

--- a/src/app/post/[slug]/layout.module.scss
+++ b/src/app/post/[slug]/layout.module.scss
@@ -1,5 +1,6 @@
 .nav {
     position: fixed;
+    z-index: 1;
     inset: 20px 20px auto auto;
 }
 
